--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
 
-/* Your CSS Code here. */
+img, video, audio {
+    width: 200px;
+    height: 200px;
+}
